--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-native-calendars": "^1.6.2",
+    "react-native-datepicker": "^1.6.0",
+    "react-native-keyboard-aware-scroll-view": "^0.3.0",
+    "react-native-material-design": "^0.3.7",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
