--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-native-calendars": "^1.6.2",
+    "react-native-collapsible": "^0.9.0",
     "react-native-datepicker": "^1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-material-design": "^0.3.7",
