--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-material-design": "^0.3.7",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
+    "react-timer-mixin": "^0.13.3",
     "redux": "^3.7.2"
   }
 }
