--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-datepicker": "^1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-material-design": "^0.3.7",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "react-timer-mixin": "^0.13.3",
