--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
   "expo": {
-    "sdkVersion": "20.0.0"
+   "name": "Todo",
+   "icon": "",
+   "version": "1.0.0",
+   "slug": "your-app-slug",
+   "sdkVersion": "20.0.0",
+   "ios": {
+     "bundleIdentifier": "com.yourcompany.yourappname"
+   },
+   "android": {
+     "package": "com.yourcompany.yourappname"
+   }
   }
 }
